2008-07-10  AVASYS Corporation <pipsnews@avasys.jp>

	* added the EPSON LP-S300 and EPSON LP-M6000.

2008-06-29  Dafydd Crosby <dcrosby@userful.com>
	* Added following printers:
	Okidata B4545_MFP
	Okidata B6200n
	Okidata C5300
	Okidata C5400
	Okidata C5400dn
	Okidata C5400dtn
	Okidata C5400n
	Okidata C5400tn
	Okidata C6000dn
	Okidata C6000n
	Okidata C6050dn
	Okidata C6050n
	Okidata C6100dtn
	Okidata C6100hdn
	Okidata C6100n
	Okidata C6150dn
	Okidata C6150dtn
	Okidata C6150hdn
	Okidata C6150n
	Okidata C710dn
	Okidata C710dtn
	Okidata C710n
	Okidata C7300
	Okidata C7300dn
	Okidata C7300n
	Okidata C7350hdn
	Okidata C7350n
	Okidata C7500hdn
	Okidata C7550hdn
	Okidata C7550n
	Okidata C9200
	Okidata C9200dn
	Okidata C9200n
	Okidata C9300dn
	Okidata C9300hdn
	Okidata C9300n
	Okidata	C9400
	Okidata C9500dn
	Okidata C9500hdn
	Okidata C9600dn
	Okidata	C9600hdn
	Okidata C9600hdtn
	Okidata C9600n
	Okidata C9650dn
	Okidata C9650hdn
	Okidata C9650hdtn
	Okidata C9650n
	Okidata C9800hdn
	Okidata C9800hn
	Ricoh Aficio_SP_C222SF
	Sharp MX-2300FGPS
	Sharp MX-2300GPS
	Sharp MX-2300NPS
	Sharp MX-2700FGPS
	Sharp MX-2700GPS
	Sharp MX-2700NPS
	Sharp MX-3500FNPS
	Sharp MX-3500NPS
	Sharp MX-3501FNPS
	Sharp MX-3501NPS
	Sharp MX-4500FNPS
	Sharp MX-4500NPS
	Sharp MX-4501FNPS
	Sharp MX-4501NPS
	Xante FilmMaker_4

2008-06-26  Dafydd Crosby <dcrosby@userful.com>
	* added following printers:
	Okidata B2540 MFP
	Okidata B4200
	Okidata B4250
	Okidata B4300
	Okidata B6200
	Okidata C5540 MFP
	Okidata C5550 MFP
	Okidata C5700dn
	Okidata C5700n
	Okidata C5750
	Okidata C5900n
	Okidata C5900dn
	Okidata C5900dtn
	Okidata C5900cdtn
	Okidata C6100
	Okidata C9800

2008-06-26  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/splix.xml, driver/splix2.xml: Added separate entry for
	  the version under development os SpliX.

	* driver/gutenprint52.xml: Updated the driver entry to version
	  5.2.0 beta 3 of the Gutenprint driver.

	* driver/pegg.xml: Updated driver entry, especially the URL, as the