@@ -1,4 +1,4 @@
-<driver id="driver/Postscript">
+<?xml version="1.0" ?><driver id="driver/Postscript">
   <name>Postscript</name>
   <url>http://partners.adobe.com/public/developer/ps/index_specs.html</url>
   <execution>
@@ -4183,5 +4183,5 @@ The printer's memory can also be upgraded up to 144MB. This is also a DIMM modul
     <printer>
       <id>printer/Xerox-WorkCentre_Pro_133</id>
     </printer>
-  </printers>
+  <printer><id>printer/Lexmark-C720n</id></printer></printers>
 </driver>
