@@ -1014,6 +1014,9 @@ HP2100M worked fine (i.e. no need to compile IEEE1284 into your kernel).</en>
       <id>printer/Lanier-MP_C7500_LD275c</id>
     </printer>
     <printer>
+      <id>printer/Lexmark-C720n</id>
+    </printer>
+    <printer>
       <id>printer/Lexmark-E230</id>
     </printer>
     <printer>
@@ -1863,6 +1866,12 @@ HP2100M worked fine (i.e. no need to compile IEEE1284 into your kernel).</en>
     <printer>
       <id>printer/Sharp-AR-161</id>
       <!-- Sharp AR-161 -->
+    </printer>
+    <printer>
+      <id>printer/Toshiba-e-Studio_167</id>
+    </printer>
+    <printer>
+      <id>printer/Toshiba-e-Studio_237</id>
     </printer>
     <printer>
       <id>printer/Xerox-Phaser_3150</id>
