@@ -1,0 +1,39 @@
+<printer id="printer/Lexmark-C720n">
+   <make>Lexmark</make>
+   <model>C720n</model>
+   <mechanism>
+   <color/>
+      <laser/>
+      <resolution>
+         <dpi>
+            <x>600</x>
+            <y>600</y>
+         </dpi>
+      <consumables>
+      </consumables>
+      </resolution>
+   </mechanism>
+   <url></url>
+   <lang>
+      <postscript level="3">
+      </postscript>
+      <pcl level="6"/>
+      <!--no pjl-->
+      <!--no "text"-->
+   </lang>
+   <functionality>A</functionality>
+   <driver>Postscript</driver>
+   <drivers>
+     <driver>
+       <id>Postscript</id>
+     </driver>
+     <driver>
+       <id>pxlmono</id>
+     </driver>
+   </drivers>
+   <comments>
+      <en>
+      Foomatic entry made by PPDtoXML T/G 0.19 on 2008-07-30
+      </en>
+   </comments>
+</printer>
