@@ -1,0 +1,36 @@
+<printer id="printer/Toshiba-e-Studio_167">
+   <make>Toshiba</make>
+   <model>e-Studio 167</model>
+   <mechanism>
+   <!--not "color"-->
+      <laser/>
+      <resolution>
+         <dpi>
+            <!--x unknown-->
+            <!--y unknown-->
+         </dpi>
+      <consumables>
+      </consumables>
+      </resolution>
+   </mechanism>
+   <url></url>
+   <lang>
+      <postscript level="3">
+      </postscript>
+      <pcl level="6"/>
+      <!--no pjl-->
+      <!--no "text"-->
+   </lang>
+   <functionality>B</functionality>
+   <driver>pxlmono</driver>
+   <drivers>
+     <driver>
+       <id>pxlmono</id>
+     </driver>
+   </drivers>
+   <comments>
+      <en>
+      Foomatic entry made by PPDtoXML T/G 0.19 on 2008-08-06
+      </en>
+   </comments>
+</printer>
