@@ -1,3 +1,9 @@
+2008-08-07  Dafydd Crosby <dcrosby@userful.com>
+	* Added following printers:
+	Lexmark C720n
+	Toshiba e-Studio 167
+	Toshiba e-Studio 237
+
 2008-07-10  AVASYS Corporation <pipsnews@avasys.jp>
 
 	* added the EPSON LP-S300 and EPSON LP-M6000.
